package temperance.protobuf;

option optimize_for = SPEED;

message Request {
    enum Parser {
        MECAB = 0;
        BIGRAM = 1;
        PREFIX = 2;
    }

    message Add {
        required string key = 1;
        required string str = 2;
        required string value = 3;
        optional uint32 expire = 4 [default = 86400];
        optional Parser parser = 5 [default = MECAB];
    }
    message Search {
        required string key = 1;
        required string str = 2;
        optional Parser parser = 3 [default = MECAB];
    }
}
message Response {
    message Add {
        required bool succeed = 1;
    }
    message Search {
        repeated string values = 1;
    }
}

service FullTextService {
    rpc add(Request.Add) returns(Response.Add);
    rpc search(Request.Search) returns(Response.Search);
}
