package temperance.protobuf;

option optimize_for = SPEED;

message Request {
    message Set {
        required string key = 1;
        required string value = 2;
    }
    message Get {
        required string key = 1;
    }
}
message Response {
    message Set {
        required bool succeed = 1;
    }
    message Get {
        required string value = 1;
    }
}

service MapService {
    rpc set(Request.Set) returns(Response.Set);
    rpc get(Request.Get) returns(Response.Get);
}
